Employee can view his/her own details. Fix layout problem with print button and info boxes.
git-svn-id: http://svn.assembla.com/svn/make-it/timetrack@57 e0e46c49-be69-4f5a-ad62-21024a331aea

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -66,7 +66,7 @@ body, td, th {
 /* print button. */
 #printer {
     float: right;
-    margin: 5px 20px 0 0;
+    margin: 5px 20px 10px 0;
 }
 #printer a {
     color: #000;
@@ -172,6 +172,7 @@ table.all-right td {
 /* sidebar */
 div.sidebar {
     float: right;
+    clear: right;
     width: 250px;
     padding: 0 0 0 10px;
     background: #fff;
